# ocaml-dynamic-records

./: README.md  dune-project
lib/: dune
src/: dune  dynamic_record.ml  dynamic_record.mli  index.mld  signatures.ml  signatures.mli
test/: dune
